new endpoints, fix API problems
